MyNginxDemo/mynginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mynginx-svc
  name: mynginx-svc
  namespace: demo
spec:
  type: LoadBalancer
  ports:
    - name: "http"
      port: 80
      targetPort: 80
  selector:
    app: mynginx
status:
  loadBalancer: {}
